--- a/t3.md
+++ b/t3.md
@@ -569,6 +569,112 @@ print(h(pi / 4))
 ]
 ]
 
+---
+
+## _Closures_: Exercicis Recapitulatoris
+
+* (**Z73720**) Implementeu la funció `aplicacio-condicional`, una funció que té dues
+funcions com a paràmetres, `f` i `condicio`. `f` és una funció que pren dos
+arguments, i `condicio` és una funció-predicat que acceptarà un sol
+argument i retornarà `true` o `false`. `aplicacio-condicional` retorna una funció `fr` tal que:
+```Clojure
+                                    |sí ---> retorna gr
+fr(x) --és cert (condicio x)?---|
+                                    |no ---> Ignorem x i retornem fr
+
+                                    |sí ---> retorna (f x y)
+gr(y) --és cert (condicio y)?---|
+                                    |no ---> Ignorem y i retornem gr
+```
+Així, podem passar tants arguments com calgui fins que n'hi hagi dos
+que satisfan condicio. Obviament el darrer argument que fem servir cal
+que satisfaci la condició; en altre cas intentaria aplicar un nombre
+com si fos una funció.
+```Clojure
+(def suma-si-parell (aplicacio-condicional + even?)) 👉 #'user/suma-si-parell
+((suma-si-parell 2) 4)                               👉 6 
+(((((suma-si-parell 2) 3) 5) 7) 6)                   👉 8
+```
+
+---
+
+## _Closures_: Exercicis Recapitulatoris
+
+* Feu una funció `(maximitzador f)` que, donada una funció com a paràmetre
+(anomenem-la $f$; suposarem que aquesta funció $f$ rep un nombre i retorna
+un nombre), retorni una altra funció.<br>
+Aquesta funció retornada ha de ser una funció tal que, després de les
+invocacions amb $n-1$ paràmetres, quan s'invoca amb l'$n$-èssim paràmetre
+escrigui al _stdout_ el màxim dels $f(x_i)$ trobats fins el moment (és a
+dir, el màxim de $f(x_1),...,f(x_n)$ per a tots els $x_i$ amb que aquesta
+funció, retornada per `(maximitzador f)`, ha estat invocada).<br>
+No podeu utilitzar cap llista, diccionari, conjunt o cap altra
+estructura de dades. Només nombres i funcions.
+```Clojure
+(def h (maximitzador #(* % %))) 👉 #'user/h
+((((((h 2) 3) 2) 1) 5) 3)       👉 #object[user$maximitzador$...]
+;; la crida ha retornat una representació interna de la funció retornada
+👁️ 4
+👁️ 9
+👁️ 9
+👁️ 9
+👁️ 25
+👁️ 25
+```
+
+---
+
+## _Closures_: Exercicis Recapitulatoris
+
+* Escriure una funció `ordre(ops)` que, donat un **vector** no buit `ops` de
+**funcions de dos paràmetres** retorna **una nova funció de dos paràmetres**.<br>
+Aquesta funció retornada el que ha de fer és, quan és invocada, ha
+d'escriure al _stdout_ el resultat d'aplicar la primera funció d'`ops` als arguments
+que ha rebut, després ha de retornar una funció que aplicarà la segona
+funció d'`ops` i així successivament. Quan la funció retornada hagi
+aplicat la darrera funció d'`ops`, caldrà que retorni una funció que
+torni a començar aplicant la primera funció d'`ops`.
+```Clojure
+(def funcions [+ * -])   👉 #'user/funcions ;; [suma, producte, resta]
+(def f (ordre funcions)) 👉 #'user/f
+(def f (f 1.0 2.0)) 👉 #'user/f
+👁️ 3.0              ;; 1.0 + 2.0
+(def f (f 1.0 2.0)) 👉 #'user/f
+👁️ 2.0              ;; 1.0 * 2.0
+(def f (f 1.0 2.0)) 👉 #'user/f
+👁️ -1.0             ;; 1.0 - 2.0
+(def f (f 1.0 2.0)) 👉 #'user/f
+👁️ 3.0              ;; 1.0 + 2.0
+(def f (f 1.0 2.0)) 👉 #'user/f
+👁️ 2.0              ;; 1.0 * 2.0
+(def f (f 1.0 2.0)) 👉 #'user/f
+👁️ -1.0             ;; 1.0 - 2.0
+;; etc...
+```
+
+---
+
+## _Closures_: Exercicis Recapitulatoris
+
+* Escriure una funció `filtra` que, donada una funció-predicat `pred`,
+retorna una funció d'un paràmetre enter positiu tal que _guarda_
+aquest si satisfà la funció-predicat `pred`, en altre cas
+l'ignora i retorna una funció d'un paràmetre que fa el mateix procés.
+Aquesta funció retornada, en rebre com a paràmetre `-1`, s'aturarà
+escrivint al _stdout_ un vector amb tots els paràmetres rebuts que
+han satisfet `pred` (el paràmetre
+de la darrera crida cal que sigui `-1`, en altre cas retornarà una funció) i _retornant_
+el _keyword_ `:done`.
+```Clojure
+(def h (filtra even?)) 👉 #'user/h
+((((((h 2) 4) 6) 8) 10) -1) 👉 :done
+👁️ [2 4 6 8 10]
+((((((h 2) 3) 6) 5) 10) -1) 👉 :done
+👁️ [2 6 10]
+```
+No podeu fer servir llistes ni vectors (ni cap altre estructura de dades) més que passant-ho
+com a paràmetre a una funció. No sabem encara treballar amb _closures_ amb estat mutable, per
+tant, aquest problema no és tan senzill com pot semblar.
 
 ---
 
