--- a/t2.md
+++ b/t2.md
@@ -1688,7 +1688,7 @@ supports higher-order functions and data immutability._
       (fold #(%1 %2) arg funcs)))
 ```
 
-.footnote[.red[*] [Pipeline in Clojure](https://clojurepatterns.com/1/5/4/)
+.footnote[.red[*] [Pipeline in Clojure](https://clojurepatterns.com/1/5/4/)]
 
 ---
 
