--- a/t3.md
+++ b/t3.md
@@ -656,13 +656,36 @@ torni a començar aplicant la primera funció d'`ops`.
 
 ## _Closures_: Exercicis Recapitulatoris
 
+* Escriure una funció `aplica` que, donada una funció `f` d'un paràmetre numèric positiu, que
+retorna un nombre, retorna una altra funció que, donat un nombre positiu `x` aplica `f`
+a `x`, `(f x)`, el _guarda_ i retorna una funció que repeteix el procés. Si aquesta funció rep com a
+argument `-1`, la funció acaba i retorna un vector amb el resultat d'haver aplicat `f` a tots
+els arguments que ha rebut aquesta funció (l'argument
+de la darrera crida cal que sigui `-1`, en altre cas retornarà una funció).
+```Clojure
+(require '[clojure.math :as m])
+(def h (aplica m/sqrt)) 👉 #'user/h
+((((((h 2) 4) 6) 8) 10) -1) 👉
+   [1.414213562373 2.0 2.44948974278 2.828427124746 3.162277660168]
+(def h (aplica m/cos)) 👉 #'user/h
+((((h (/ m/PI 4)) (/ m/PI 2)) m/PI) -1) 👉
+   [0.7071067811865476 6.123233995736766E-17 -1.0]
+```
+No podeu fer servir llistes ni vectors (ni cap altre estructura de dades) més que passant-ho
+com a argument a una funció. No sabem encara treballar amb _closures_ amb estat mutable, per
+tant, aquest problema no és tan senzill com pot semblar.
+
+---
+
+## _Closures_: Exercicis Recapitulatoris
+
 * Escriure una funció `filtra` que, donada una funció-predicat `pred`,
-retorna una funció d'un paràmetre enter positiu tal que _guarda_
+retorna una funció d'un paràmetre numèric positiu tal que _guarda_
 aquest si satisfà la funció-predicat `pred`, en altre cas
 l'ignora i retorna una funció d'un paràmetre que fa el mateix procés.
-Aquesta funció retornada, en rebre com a paràmetre `-1`, s'aturarà
-escrivint al _stdout_ un vector amb tots els paràmetres rebuts que
-han satisfet `pred` (el paràmetre
+Aquesta funció retornada, en rebre com a argument `-1`, s'aturarà
+escrivint al _stdout_ un vector amb tots els arguments rebuts que
+han satisfet `pred` (l'argument
 de la darrera crida cal que sigui `-1`, en altre cas retornarà una funció) i _retornant_
 el _keyword_ `:done`.
 ```Clojure
@@ -675,6 +698,8 @@ el _keyword_ `:done`.
 No podeu fer servir llistes ni vectors (ni cap altre estructura de dades) més que passant-ho
 com a paràmetre a una funció. No sabem encara treballar amb _closures_ amb estat mutable, per
 tant, aquest problema no és tan senzill com pot semblar.
+
+* Canvia la funció `filtra` per a que retorni el vector, enlloc d'escriure'l i retornar `:done`
 
 ---
 
